<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_entry_item_pressed"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_entry_item_normal"
        android:gravity="center"
        android:padding="@dimen/main_5dp"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="@dimen/main_22dp" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_message"
        android:textColor="@color/black"
        android:textSize="@dimen/main_20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_10dp"
            android:background="@drawable/bcg_selector"
            android:padding="@dimen/main_10dp"
            android:text="@string/dialog_no"
            android:textColor="@color/black" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </FrameLayout>

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_10dp"
            android:background="@drawable/bcg_selector"
            android:gravity="right"
            android:padding="@dimen/main_10dp"
            android:text="@string/dialog_yes"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>