<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_5dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/img_accelerate_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/accelerate_selector"
                android:src="@drawable/btn_homeasup_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set"
                android:textColor="@color/black"
                android:textSize="@dimen/main_20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_accelerate_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="HTC"
            android:textColor="@color/black"
            android:textSize="@dimen/main_22sp" />

        <TextView
            android:id="@+id/txt_accelerate_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="HTC 919d android4.4.2"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/pgb_accelerate_up"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/txt_accelerate_mem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_accelerate_clear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/accelerate_selector"
            android:text="@string/clear_all"
            android:textColor="@color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/lst_accelerate_mid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_accelerate_bottom"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:paddingBottom="@dimen/main_5dp"
            android:src="@drawable/check_rect_correct_default" />

        <ToggleButton
            android:id="@+id/tgl_acceletate_bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/accelerate_selector"
            android:textColor="@color/white"
            android:textOff="@string/system_process"
            android:textOn="@string/user_process" />
    </LinearLayout>

</LinearLayout>