<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_entry_item_normal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_35dp"
        android:layout_marginLeft="@dimen/main_5dp" >

        <ImageView
            android:id="@+id/img_telmgr_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_homeasup_default" />

        <TextView
            android:id="@+id/txt_telmgr_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_tel_title"
            android:textColor="@color/black"
            android:textSize="@dimen/main_22sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_tel_contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/main_5dp"
            android:layout_weight="1"
            android:background="@drawable/bcg_green_selector"
            android:gravity="center"
            android:text="@string/txt_tel_contacts"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_tel_addrlist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/main_5dp"
            android:layout_marginRight="@dimen/main_5dp"
            android:layout_marginBottom="@dimen/main_5dp"
            android:layout_weight="1"
            android:background="@drawable/bcg_yellow_selector"
            android:gravity="center"
            android:text="@string/txt_tel_addrlist"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/grv_tel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/main_5dp"
        android:layout_marginRight="@dimen/main_5dp"
        android:horizontalSpacing="@dimen/main_5dp"
        android:listSelector="#00000000"
        android:numColumns="2"
        android:verticalSpacing="@dimen/main_5dp" >
    </GridView>

</LinearLayout>