<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_entry_item_normal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_35dp" >

        <ImageView
            android:id="@+id/img_garbage_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bcg_selector"
            android:src="@drawable/btn_homeasup_default" />

        <TextView
            android:id="@+id/txt_garbage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/buttom_clear"
            android:textColor="@color/black"
            android:textSize="@dimen/main_20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/garbage_green" >

        <TextView
            android:id="@+id/txt_garbage_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="11"
            android:textColor="@color/white"
            android:textSize="@dimen/main_40sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txt_garbage_num"
            android:layout_marginRight="@dimen/main_35dp"
            android:layout_toLeftOf="@id/txt_garbage_num"
            android:text="@string/txt_file_find"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/elst_garbage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ExpandableListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_35dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/chb_all_garbage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_clear_garbage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear_all" 
            android:textSize="@dimen/main_20sp"
            android:textColor="@color/black"
            android:background="@drawable/second_soft_selector"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>