<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_entry_item_normal"
    android:orientation="vertical"
    android:paddingRight="@dimen/main_10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_35dp"
        android:background="@drawable/mem_bar_bg" >

        <ImageView
            android:id="@+id/img_top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_entry_item_normal"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/txt_top_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/top_name"
            android:textColor="@color/black"
            android:textSize="@dimen/main_top_txtsize" />

        <ImageButton
            android:id="@+id/imb_top_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/bcg_selector"
            android:src="@drawable/ic_child_configs" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/main_5dp"
        android:layout_weight="6"
        android:paddingLeft="@dimen/main_10dp" >

        <!-- 饼形图 -->

        <edu.feicui.aide.view.PiechartView
            android:id="@+id/soft_circle_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/img_blue"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignTop="@id/soft_circle_view"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@id/soft_circle_view"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/soft_circle_view"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="37dp"
            android:layout_toRightOf="@id/img_blue"
            android:text="@string/txt_soft_internal_space"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/img_green"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignBottom="@id/soft_circle_view"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/soft_circle_view"
            android:background="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/soft_circle_view"
            android:layout_marginBottom="37dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/img_green"
            android:text="@string/txt_soft_storage_space"
            android:textColor="@color/black" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/main_5dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="@dimen/main_10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_soft_internal_space"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/pgb_soft_internal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/main_5dp" />

        <TextView
            android:id="@+id/txt_internal_mem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="100MB"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_soft_storage_space"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/pgb_soft_storage"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/main_5dp" />

        <TextView
            android:id="@+id/txt_storage_mem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="100MB"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_soft_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/main_5dp"
        android:layout_weight="2"
        android:background="@drawable/bcg_selector"
        android:drawableRight="@drawable/ic_arrows_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/main_10dp"
        android:paddingRight="@dimen/main_10dp"
        android:text="@string/txt_soft_all"
        android:textColor="@color/black"
        android:textSize="@dimen/main_20sp" />

    <TextView
        android:id="@+id/txt_soft_system"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/main_5dp"
        android:layout_weight="2"
        android:background="@drawable/bcg_selector"
        android:drawableRight="@drawable/ic_arrows_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/main_10dp"
        android:paddingRight="@dimen/main_10dp"
        android:text="@string/txt_soft_system"
        android:textColor="@color/black"
        android:textSize="@dimen/main_20sp" />

    <TextView
        android:id="@+id/txt_soft_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/main_5dp"
        android:layout_weight="2"
        android:background="@drawable/bcg_selector"
        android:drawableRight="@drawable/ic_arrows_right"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/main_10dp"
        android:paddingRight="@dimen/main_10dp"
        android:text="@string/txt_soft_user"
        android:textColor="@color/black"
        android:textSize="@dimen/main_20sp" />

</LinearLayout>